added images and added content to about page

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Links & Images</title>
 </head>
 <body>
 
-    <h1>Homepage</h1>
-    <a href=”https://theuselessweb.com/”>click me</a>
-    <a href="./pages/about.html">About</a>
-    <img src="images/first-img.jpg" alt="flower">
-    <img src="images/second-img.jpg">
-    <img src="images/third-img.jpg">
+    <div class="style-1">
+        <div><h1 style="background-color: #FF8787; font-size: 40px; text-align: center;">Homepage</h1></div>  
+        <a href=”https://theuselessweb.com/”>click me</a>
+        <a href="./pages/about.html">About</a>
+        <div class="image-1">
+            <img src="images/first-img.jpg" alt="flower">
+            <img src="images/third-img.jpg" alt="female">
+            <img src="images/seventh-img.jpg" alt="car">
+            <img src="images/fourth-img.jpeg" alt="sneakers">
+        </div>
+  </div>
     
 </body>
 </html>
